kubernetes/authenticationservice_deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: authenticationservice
  namespace: app
spec:
  replicas: #replicaNo#
  selector:
    matchLabels:
      app: authenticationservice
  template:
    metadata:
      labels:
        app: authenticationservice 
    spec:
      containers:
        - name: authenticationservice 
          image: examregistry2sem.azurecr.io/authenticationservice
          ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
    name: authenticationservice
spec:
    type: ClusterIP
    ports:
    - port: 80 
    selector:
        app: authenticationservice
