kubernetes/customerservice_deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: customerservice
  namespace: app
spec:
  replicas: #replicaNo#
  selector:
    matchLabels:
      app: customerservice
  template:
    metadata:
      labels:
        app: customerservice 
    spec:
      containers:
        - name: customerservice 
          image: examregistry2sem.azurecr.io/customerservice
          ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
    name: customerservice
spec:
    type: ClusterIP
    ports:
    - port: 80 
    selector:
        app: customerservice
