kubernetes/deliveryservice_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deliveryservice
  namespace: app
spec:
  replicas: #replicaNo#
  selector:
    matchLabels:
      app: deliveryservice
  template:
    metadata:
      labels:
        app: deliveryservice
    spec:
      containers:
        - name: deliveryservice
          image: examregistry2sem.azurecr.io/deliveryservice
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: deliveryservice
spec:
  type: ClusterIP
  ports:
    - port: 80
  selector:
    app: deliveryservice
