kubernetes/deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: microservice1 
spec:
  replicas: 1
  selector:
    matchLabels:
      app: microservice1
  template:
    metadata:
      labels:
        app: microservice1 
    spec:
      containers:
        - name: microservice1 
          image: examregistry2sem.azurecr.io/microservice1
          ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
    name: microservice1
spec:
    type: LoadBalancer
    ports:
    - port: 80 
    selector:
        app: microservice1
