kubernetes/emailservice_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emailservice
  namespace: app
spec:
  replicas: #replicaNo#
  selector:
    matchLabels:
      app: emailservice
  template:
    metadata:
      labels:
        app: emailservice
    spec:
      containers:
        - name: emailservice
          image: examregistry2sem.azurecr.io/emailservice
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: emailservice
spec:
  type: ClusterIP
  ports:
    - port: 80
  selector:
    app: emailservic
