kubernetes/gateway_deployment.yml
apiVersion : apps/v1
kind: Deployment
metadata:
  name: gateway
  namespace: app
spec:
  replicas: #replicaNo#
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway 
    spec:
      containers:
        - name: gateway 
          image: examregistry2sem.azurecr.io/gateway
          ports:
          - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
    name: gateway
spec:
    type: ClusterIP
    ports:
    - port: 80 
    selector:
        app: gateway
