kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
    name: microservice1
spec:
    type: LoadBalancer
    ports:
    - port: 80 
    selector:
        app: microservice1
