kubernetes/app-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
  namespace: app
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    kubernetes.io/tls-acme: "true"
spec:
  tls:
    - hosts:
       - eksamen-aks-ingress.northeurope.cloudapp.azure.com
      secretName: my-ssl-cert-secret-cdqpq
  rules:
  - host: eksamen-aks-ingress.northeurope.cloudapp.azure.com
    http:
      paths:
      - path: /userservice(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: userservice
            port:
              number: 80
      - path: /restaurantservice(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: restaurantservice
            port:
              number: 80
      - path: /orderservice(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: orderservice
            port:
              number: 80        
       - path: /deliveryservice(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: deliveryservice
            port:
              number: 80
      - path: /authenticationservice(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: authenticationservice
            port:
              number: 80
      - path: /gateway(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: gateway
            port:
              number: 80
     - path: /feedbackservice(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: feedbackservice
            port:
              number: 80
