kubernetes/app-nginx.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
  namespace: app
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    kubernetes.io/tls-acme: "true"
spec:
  tls:
    - hosts:
      - 20.54.90.123.nip.io # update IP address here
      secretName: my-ssl-cert-secret
  rules:
  - host: 20.54.90.123.nip.io
    http:
      paths:
      - path: /microservice1(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: microservice1
            port:
              number: 80
