kubernetes/ssl-tls-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ssl-tls-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
      - 20.54.90.123.nip.io # update IP address here
      secretName: app-web-cert
  rules:
  - host: 20.54.90.123.nip.io # update IP address here
    http:
      paths:
      - backend:
        path: /microservice1(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: microservice1
            port:
              number: 80
